[Update] workspace swagger
